# initv

./: CMakeLists.txt  LICENSE  check.cmake  config.h.cmake
po/: LINGUAS  POTFILES  initv.pot  lang.cmake  ru.po  uk.po
src/: CMakeLists.txt  initv.c
src/basic/: log.c  log.h  macro.h
src/conf/: conf.c  conf.h  loc.h  os.h  vcon.h
src/core/: init.h  locale.c  mount.h  vconsole.c
src/core/mount/: fstype.c  fstype.h  init.c  mount.c  mount_s.h
src/error/: err.c  err.h  errlist.c
src/module/: hostname.c  mac.c  mac.h  mount.c  signal.c  welcome.c
